<resources>
    <string name="app_name">Falaê</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sincronizar Usuário</string>
    <string name="action_sign_in_short">Sincronizar</string>
    <string name="error_invalid_email">Este email não é válido.</string>
    <string name="error_incorrect_password">Email ou senha inválida</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>
    <string name="synchronize">Sincronizar</string>
    <string name="title_activity_login">Baixar Prancha</string>
    <string name="spreadsheets">Pranchas</string>
    <string name="users">Sincronizar usuário</string>
    <string name="sync_user">Sincronizar Usuário</string>
    <string name="voice">Voz</string>
    <string name="previous">Voltar</string>
    <string name="next">Avançar</string>
    <string name="image_view_descriptor">imagem</string>
    <string name="exit_app_msg">Por favor pressione VOLTAR novamente para sair</string>
    <string name="synchronize_message">Sincronizando</string>
    <string name="authenticate_message">Autenticando</string>
    <string name="settings">Configurações</string>
    <string name="scan_mode">Modo Varredura</string>
    <string name="feedback_sound">Feedback auditivo</string>
    <string name="success_user_added">Usuário sincronizado com sucesso!</string>
    <string name="user_info">Perfil</string>
    <string name="scan_mode_duration">Tempo de varredura (segundos)</string>
    <string name="page_not_found">A prancha não contém a página selecionada.</string>
    <string name="download_failed">Um erro ocorreu ao baixar as imagens. Por favor verifique sua conexão com a
        internet.
    </string>
    <string name="error_internet_access">Um erro ocorreu ao tentar conectar-se com o servidor. Por favor verifique sua
        conexão com a internet.
    </string>
    <string name="remove">Remover</string>
    <string name="removeUser">Remover Usuário</string>
    <string name="questionRemoveUser">Tem certeza que deseja remover este usuário?</string>
    <string name="yes_option">Sim</string>
    <string name="no_option">Não</string>
    <string name="ok">OK</string>
    <string name="sampleboard">sampleboard.json</string>
    <string name="provider_not_available">Não foi possível instalar módulos de segurança do Android. Portanto, não será
        possível sincronizar sua conta.
    </string>
    <string name="language_settings_not_available">Não foi possível abrir as configurações de linguagem.</string>
    <string name="create_accout_msg">É necessário ter uma conta cadastrada na plataforma web.
        (https://www.falaeapp.com)
    </string>
    <string name="no_initial_page">Não existe uma página inicial configurada para esta prancha.</string>
    <string name="picasso_load_error">Não foi possível carregar a imagem. Por favor tente re-sincronizar sua conta.
    </string>
    <string name="background_run">Falaê está rodando em plano de fundo.</string>
    <string name="scan_mode_automatic_next_page">Mudança de página automática</string>
    <string name="images_removed">Imagens removidas com sucesso!</string>
    <string name="images_removed_error">Ocorreu um erro ao tentar remover as imagens.</string>
    <string name="confirm_clear_public_cache">Isso fará com que todas imagens públicas, compartilhadas entre diferentes
        usuários, sejam removidas deste dispositivo. Tem certeza que deseja fazer isso?
    </string>
    <string name="confirm_clear_user_cache">Isso fará com que todas suas imagens privadas do menu "Meus Itens" sejam
        removidas deste dispositivo. Você precisará sincronizar sua conta novamente. Tem certeza que deseja fazer isso?
    </string>
    <string name="clear_user_cache">Limpar cache do usuário</string>
    <string name="clear_public_cache">Limpar cache público</string>
    <string name="cache">Cache</string>
    <string name="clear_cache">Limpar Cache</string>
    <string name="save">Salvar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="new_spreadsheet_label">Criar prancha</string>
    <string name="new_page_label">Criar página</string>
    <string name="columns">Colunas</string>
    <string name="rows">Linhas</string>

    <string name="name">Nome</string>
</resources>
