<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.CreateSpreadsheetFragment">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_spreadsheet_name_textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                android:id="@+id/new_spreadsheet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeActionLabel="@string/next"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:autofillHints="name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/save_spreadsheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/new_spreadsheet_name_textinput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
